@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-_Name=Gnobots II
+_Name=GNOME Robots
 _Comment=Robots game
 Exec=gnobots2
 Icon=gnome-gnobots2.png
