@@ -1,5 +1,5 @@
 [__section_info__]
-_description=Gnome Robots II
+_description=GNOME Robots II
 
 [bad-move]
 file=gnobots2/bad.wav
